Dialogs, fix deprecation warnings